<resources>
    <string name="app_name">musicboxx</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>

    <!-- Language names -->
    <string name="language_vietnamese">Vietnamese</string>
    <string name="language_english_us">English (US)</string>
    <string name="language_english_uk">English (UK)</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="share_app">Share App</string>
    <string name="change_log">Change Log</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="quit">Quit</string>

    <!-- Notification screen -->
    <string name="new_music">New Music</string>
    <string name="playlist_updates">Playlist Updates</string>
    <string name="artist_updates">Artist Updates</string>
    <string name="mume_offers">Mume Offers</string>
    <string name="payments_subs">Payments &amp; Subscriptions</string>
    <string name="new_features">New Features</string>
    <string name="security">Security</string>

    <!-- Notification details -->
    <string name="push">Push</string>
    <string name="push_email">Push, Email</string>

    <!-- Theme -->
    <string name="choose_theme">Choose Theme</string>
    <string name="theme_light">Light Mode</string>
    <string name="theme_dark">Dark Mode</string>
    <string name="song_count_format">%d songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
