<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="24dp"
    app:cardBackgroundColor="@color/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:text="@string/choose_theme"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rgTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbLight"
                android:text="@string/theme_light"
                style="@style/RadioButtonStyle"/>

            <RadioButton
                android:id="@+id/rbDark"
                android:text="@string/theme_dark"
                style="@style/RadioButtonStyle"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:text="Cancel"
                android:textColor="#FF9800"
                android:background="@drawable/bg_btn_light_orange_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApply"
                android:text="Apply"
                android:textColor="#FFFFFF"
                android:background="@drawable/bg_btn_orange"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>